--- a/helmchart/values.yaml
+++ b/helmchart/values.yaml
@@ -44,6 +44,8 @@ virtualService:
     requestAuthentication:
       enabled: false
       jwtRules: []
+    podMonitor:
+      enabled: false
 
 service:
   type: ClusterIP
